rising-desks-page

--- a/home-page.html
+++ b/home-page.html
@@ -205,7 +205,8 @@
           <li class="category-list-item" data-category="others">others</li>
         </ul>
       </div>
-      <div class="product-card-continer"></div>
+      <div class="product-card-continer">
+      </div>
     </section>
     <!-- End product-of-the-week section -->
 
@@ -214,10 +215,14 @@
       <div class="subscribe-box">
         <h1 class="title">Get In Touch With Us</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
-        <p>Lorem ipsum dolor sit amet consectetur </p>
+        <p>Lorem ipsum dolor sit amet consectetur</p>
         <div class="input-box-container">
-            <input class="subscribe-email" type="text" placeholder="Enter Your Email Address">
-            <button class="subscribe-btn">Subscribe Now</button>
+          <input
+            class="subscribe-email"
+            type="text"
+            placeholder="Enter Your Email Address"
+          />
+          <button class="subscribe-btn">Subscribe Now</button>
         </div>
       </div>
       <div class="footer">
