--- a/rising-desks.html
+++ b/rising-desks.html
@@ -17,7 +17,7 @@
   <body>
     <!-- Start Title Bar -->
     <div class="title-bar">
-      <div>
+      <div class="item-counts-container">
         <p class="item-counts">2,949 items found</p>
       </div>
       <div class="search-input-container">
@@ -31,9 +31,6 @@
         </button>
       </div>
       <div class="view-options">
-        <div>
-            <span>View :</span>
-        </div>
         <button class="grid-btn">
             <ion-icon class="grid-icon" name="grid-outline"></ion-icon>
         </button>
@@ -45,266 +42,7 @@
     <!-- End Title Bar -->
 
     <!-- Start Product Lists -->
-    <div class="product-lists-container">
-        <!-- Start Product Card -->
-        <div class="product-card">
-            <div class="product-img-wrapper"></div>
-            <div class="product-content">
-                <p class="title">Homall Gaming Chair</p>
-                <p class="price">$ 1300.00</p>
-                <div class="review-lists">
-                    <div class="star-lists">
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                    </div>
-                </div>
-                <div class="btn-container">
-                    <div>
-                        <button class="buy-btn">Buy Now</button>
-                    </div>
-                    <div>
-                        <button class="cart-btn">Add To Cart</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Product Card -->
-
-        <!-- Start Product Card -->
-        <div class="product-card">
-            <div class="product-img-wrapper"></div>
-            <div class="product-content">
-                <p class="title">Homall Gaming Chair</p>
-                <p class="price">$ 1300.00</p>
-                <div class="review-lists">
-                    <div class="star-lists">
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                    </div>
-                </div>
-                <div class="btn-container">
-                    <div>
-                        <button class="buy-btn">Buy Now</button>
-                    </div>
-                    <div>
-                        <button class="cart-btn">Add To Cart</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Product Card -->
-
-        <!-- Start Product Card -->
-        <div class="product-card">
-            <div class="product-img-wrapper"></div>
-            <div class="product-content">
-                <p class="title">Homall Gaming Chair</p>
-                <p class="price">$ 1300.00</p>
-                <div class="review-lists">
-                    <div class="star-lists">
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                    </div>
-                </div>
-                <div class="btn-container">
-                    <div>
-                        <button class="buy-btn">Buy Now</button>
-                    </div>
-                    <div>
-                        <button class="cart-btn">Add To Cart</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Product Card -->
-
-        <!-- Start Product Card -->
-        <div class="product-card">
-            <div class="product-img-wrapper"></div>
-            <div class="product-content">
-                <p class="title">Homall Gaming Chair</p>
-                <p class="price">$ 1300.00</p>
-                <div class="review-lists">
-                    <div class="star-lists">
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                    </div>
-                </div>
-                <div class="btn-container">
-                    <div>
-                        <button class="buy-btn">Buy Now</button>
-                    </div>
-                    <div>
-                        <button class="cart-btn">Add To Cart</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Product Card -->
-
-        <!-- Start Product Card -->
-        <div class="product-card">
-            <div class="product-img-wrapper"></div>
-            <div class="product-content">
-                <p class="title">Homall Gaming Chair</p>
-                <p class="price">$ 1300.00</p>
-                <div class="review-lists">
-                    <div class="star-lists">
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                    </div>
-                </div>
-                <div class="btn-container">
-                    <div>
-                        <button class="buy-btn">Buy Now</button>
-                    </div>
-                    <div>
-                        <button class="cart-btn">Add To Cart</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Product Card -->
-
-        <!-- Start Product Card -->
-        <div class="product-card">
-            <div class="product-img-wrapper"></div>
-            <div class="product-content">
-                <p class="title">Homall Gaming Chair</p>
-                <p class="price">$ 1300.00</p>
-                <div class="review-lists">
-                    <div class="star-lists">
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                    </div>
-                </div>
-                <div class="btn-container">
-                    <div>
-                        <button class="buy-btn">Buy Now</button>
-                    </div>
-                    <div>
-                        <button class="cart-btn">Add To Cart</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Product Card -->
-
-        <!-- Start Product Card -->
-        <div class="product-card">
-            <div class="product-img-wrapper"></div>
-            <div class="product-content">
-                <p class="title">Homall Gaming Chair</p>
-                <p class="price">$ 1300.00</p>
-                <div class="review-lists">
-                    <div class="star-lists">
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                        <span>
-                            <ion-icon class="star-icon" name="star"></ion-icon>
-                        </span>
-                    </div>
-                </div>
-                <div class="btn-container">
-                    <div>
-                        <button class="buy-btn">Buy Now</button>
-                    </div>
-                    <div>
-                        <button class="cart-btn">Add To Cart</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Product Card -->
-
+    <div class="product-grid-lists-container">
         <!-- Start Product Card -->
         <div class="product-card">
             <div class="product-img-wrapper"></div>
